# btk

./: .gitignore  Cargo.toml  README.md  index.html
crates/btk_client/: Cargo.toml  index.html
crates/btk_client/src/: app.rs  app_state.rs  main.rs  theme.rs
crates/btk_client/src/applets/: files.rs  history.rs  home.rs  mail.rs  mod.rs  notes.rs  settings.rs
crates/btk_client/src/data/: app_state.rs  cloud.rs  file_loader.rs  mod.rs  remote_cloud.rs
crates/btk_client/src/network/: mod.rs  network_native.rs  network_wasm.rs
crates/btk_client/src/widgets/: confirm_button.rs  editable_label.rs  mod.rs
crates/btk_server/: Cargo.toml
crates/btk_server/src/: main.rs  network.rs  server.rs
crates/btk_worker/: .gitignore  Cargo.toml  wrangler.toml
crates/btk_worker/src/: lib.rs
crates/network_common/: Cargo.toml
crates/network_common/src/: lib.rs  mutation.rs
src/: app.rs  main.rs
src/applets/: home.rs  mail.rs  mod.rs  notes.rs  settings.rs  tasks.rs
