[workspace]
resolver = "3"

members = ["crates/btk_client", "crates/btk_server", "crates/network_common"]

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
web-time = "1"
redb = "2"
blake3 = { version = "1", features = ["serde"] }
bincode = "1"
tokio = "1"

flume = "0"
ml-dsa = "0"
chacha20 = "0"

