[workspace]
resolver = "3"

members = ["crates/btk_client", "crates/btk_server", "crates/btk_worker", "crates/network_common"]

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
web-time = "1"
redb = "2"
blake3 = { version = "1", features = ["serde"] }
bincode = "1"
tokio = "1"

flume = "0"
ml-dsa = { version = "0", default-features = false }
chacha20 = "0"

#anondb = { version = "0", git = "https://github.com/chancehudson/anondb.git" }
anondb = { version = "0", path = "../anondb" }

