[package]
name = "btk_client"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
web-time = { workspace = true }
flume = { workspace = true }
bincode = { workspace = true }
redb = { workspace = true }
ml-dsa = { workspace = true }
anondb = { workspace = true }
serde = { workspace = true }
blake3 = { workspace = true }
chacha20 = { workspace = true }

diffy = "0"

directories = "6"
eframe = "0.32.0"
egui = "0.32.0"
egui_commonmark = "0.21.1"
egui_extras = { version = "0.32.2", features = ["image"] }
image = { version = "0.25.8", features = ["jpeg"] }
indexmap = "2.11.0"
log = "0.4.28"
futures-util = { version = "0.3.31", features = ["sink"] }

network_common = { path = "../network_common" }
rand = "0.9.2"
egui_taffy = "0.8.1"

# For web builds
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
web-sys = "0.3.77"
gloo-timers = { version = "0.3.0", features = ["futures"] }
gloo-net = { version = "0.6.0", features = ["websocket"] }
wasm-bindgen = "0.2.100"

# Desktop-only dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"
tokio = { workspace = true, features = ["full"] }
tokio-tungstenite = { version = "0.26.1", features = ["handshake", "native-tls"] }


