[package]
name = "btk_client"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
web-time = { workspace = true }
flume = { workspace = true }
bincode = { workspace = true }
redb = { workspace = true }
ml-dsa = { workspace = true }
anondb = { workspace = true }
serde = { workspace = true }
blake3 = { workspace = true }
chacha20 = { workspace = true }

diffy = "0"

names = "0.14.0"
hex = "0.4.0"
directories = "6"
eframe = "0.32.0"
egui = "0.32.0"
egui_commonmark = "0.21.1"
egui_extras = { version = "0.32.2", features = ["image"] }
image = { version = "0.25.8", features = ["jpeg"] }
indexmap = "2.11.0"
log = "0.4.28"
futures-util = { version = "0.3.31", features = ["sink"] }

network_common = { path = "../network_common" }
rand = { version = "0.9.2" }
egui_taffy = "0.8.1"
reqwest = "0.12.23"
tokio_with_wasm = { version = "0.8.7", features = ["rt", "time"] }
gloo-file = "0.3.0"
tempfile = "3.22.0"

# For web builds
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3.77", features = ["Window", "Location", "Url"] }
gloo-timers = { version = "0.3.0", features = ["futures"] }
gloo-net = { version = "0.6.0", features = ["websocket"] }
wasm-bindgen = "0.2.100"
getrandom = { version = "0.3.3", features = ["wasm_js"] }
tokio = { workspace = true, features = ["rt"] }
gloo-storage = "0.3.0"

# Desktop-only dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"
tokio-tungstenite = { version = "0.26.1", features = ["handshake", "native-tls"] }
tokio = { workspace = true, features = ["full"] }
open = "5"
arboard = "3.6.1"
