[package]
name = "btk_server"
version = "0.1.0"
edition = "2024"
license-file = "LICENSE"

[lib]

[dependencies]
anyhow = { workspace = true }
bincode = { workspace = true }
flume = { workspace = true }
serde = { workspace = true }
blake3 = { workspace = true }
redb = { workspace = true }

nanoid = "0.4.0"
tokio = { version = "1.43.0", features = ["full"] }
once_cell = "1.20.3"
futures-util = "0.3.31"
dashmap = "6.1.0"
tokio-tungstenite = { version = "0.26.1", features = ["handshake", "native-tls"] }
